--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "devDependencies": {
+    "@aave/protocol-v2": "^1.0.1",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-etherscan": "^3.1.6",
     "@nomiclabs/hardhat-waffle": "^2.0.5",
     "chai": "^4.3.7",
     "dotenv": "^16.0.3",
     "ethereum-waffle": "^4.0.9",
-    "ethers": "^6.0.3",
+    "ethers": "^5.4",
     "hardhat": "^2.12.7",
     "hardhat-contract-sizer": "^2.8.0",
     "hardhat-deploy": "^0.11.23",
